{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "7f5fcf07-0260-456a-b69e-08a22d6ea08f",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "fe0f1432-b089-4d2b-9291-f9753c83353f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shoot",
                    "type": "Value",
                    "id": "a6d85ac2-09f8-4f75-aeed-db265aa27df4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "269018d0-6883-48ad-af65-8e59e434f5d7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Finnish",
                    "type": "Button",
                    "id": "57c446ad-68ad-4357-a28b-61a5846cb3fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "0615f41e-ac68-4d01-95f8-23dbea7dd04e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e89dabee-b707-4a15-9294-4eff34d67a54",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "693124a8-b288-40a6-a7c0-54b3ff9e0437",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "85d40de3-c067-4244-b805-bda6b9f7fc27",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0f3f4c4b-3551-4f16-adbb-6de1386d1035",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f614cf24-ff6e-439e-8faa-16dbe7228c71",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44c6c764-e535-4dba-9e9b-1e97b08e7e25",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1abf219-2338-47ab-9869-19d547a6d7e6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Finnish",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse and Keyboard",
            "bindingGroup": "Mouse and Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}